--- a/css/screen.css
+++ b/css/screen.css
@@ -6,6 +6,15 @@
 a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 /* stylelint-enable */
 
+
+/* ===== BASE STYLES ===== */
+
+/*
+  Setting type to a major second modular scale
+  http://www.modularscale.com/?16&&1.125&web&text
+*/
+
+
 html {
   font-family: 'Nunito', sans-serif;
   font-size: 1.18em; /* 19px */
@@ -24,6 +33,8 @@ h1 {
   color: #607D8B;
 }
 
+/* ===== LAYOUT STYLES ===== */
+
 .reasons-list {
     margin-left: 1.25em;
     margin-right: 1.25em;
@@ -31,6 +42,7 @@ h1 {
     font-size: 1.25em;
     font-weight: 400;
     padding-bottom: 1.66em;
+    display:
 }
 
 .register {
@@ -89,11 +101,15 @@ label, name {
     float: left;
     padding-right: 10px;
 }
+
 .tips {
     float: left;
     padding-right: 10px;
 }
+
 .read {
     float: left;
     padding-right: 10px;
 }
+
+/* ===== STATE STYLES ===== */
