--- a/css/screen.css
+++ b/css/screen.css
@@ -112,3 +112,39 @@ label, name {
 }
 
 /* ===== STATE STYLES ===== */
+
+/* 775 @ 16px/em */
+@media screen and (min-width: 48.4375em) {
+  #page {
+    margin: 0 25.42857143% 0 14.28571429%;
+  }
+}
+
+@media screen and (min-width: 990em) {
+  #page {
+    margin: 0;
+  }
+  .content {
+    position: relative;
+  }
+  #primary {
+    width: 54%; /* 378px @ 700px */
+    float: left;
+  }
+  #secondary {
+    width: 39.71428571%; /* 278px @ 700px */
+    float: right;
+  }
+  footer {
+    clear: both;
+  }
+}
+
+@media screen and (min-width: 21.81em) {
+  #Mac {
+    display: inline;
+    padding-left: 2em;
+  }
+}
+
+
