Added in css for the circle icons that are used with the list

--- a/css/screen.css
+++ b/css/screen.css
@@ -110,6 +110,12 @@ label, name {
   color: #77AAAD;    
 }
 
+.circle {
+    display: inline;
+    float: left;
+    margin-left: 20px;
+}
+
 /* ===== STATE STYLES ===== */
 
 /* 775 @ 16px/em */
