--- a/css/screen.css
+++ b/css/screen.css
@@ -18,7 +18,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 html {
   font-family: "Nunito", sans-serif;
   font-size: 1.18em; /* 19px */
-  line-height: 1.21em; /* 23px = 1 gridline*/
+  line-height: 1.43em; /* 23px = 1 gridline*/
   background-color: #CFD8DC;
   color: #FFFFFF;
 }
@@ -27,8 +27,8 @@ h1 {
   padding-top: 0.94em; /* 15 px */
   font-size: 2.5em; /* 40px */
   font-weight: bold;
-  line-height: 1.31; /* 46 @ 35px em */
-  padding-bottom: 0.94em; /* 15px */
+  line-height: 2.18; /* 46 @ 35px em */
+  padding-bottom: 0.625em; /* 10px */
   text-align: center;
   color: #607D8B;
 }
@@ -36,12 +36,12 @@ h1 {
 /* ===== LAYOUT STYLES ===== */
 
 .reasons-list {
-  margin-left: 1.25em;
-  margin-right: 1.25em;
-  line-height: 1.56em;
+  margin-left: 1.25em; /* 18px */
+  margin-right: 1.25em; /* 18px */
+  line-height: 1.56em;  /* 25px */
   font-weight: 400;
-  font-size: 19px;
-  padding-bottom: 1.66em;
+  font-size: 1.1875em; /* 19px */
+  padding-bottom: 1.625em; /* 26 px */
   text-align: left;
 }
 
@@ -54,14 +54,14 @@ input,
 text,
 email {
   width: 100%;
-  padding: 0.9375em;
-  border-radius: 0.3125em;
+  padding: 0.9375em; /* 15px */
+  border-radius: 0.3125em; /* 5px */
   border-style: none;
-  font-size: 0.9375em;
+  font-size: 0.9375em; /* 15px */
 }
 
 .name {
-  padding-bottom: 0.9375em;
+  padding-bottom: 0.9375em; /* 15px */
 }
 
 label {
@@ -70,12 +70,12 @@ label {
 }
 
 label, name {
-  padding-bottom: 0.9375em;
-  padding-top: 10px;
+  padding-bottom: 0.9375em; /* 15px */
+  padding-top: 0.625em; /* 10px */
 }
 
 .button {
-  font-size: 1em;
+  font-size: 1em; /* 16px */
   font-weight: 500;
   color: #FFFFFF;
   background-color: #93C757;
@@ -88,24 +88,24 @@ label, name {
 
 .submit-button {
   display: block;    
-  padding: 0.625em;
-  padding-top: 2.1875em;
+  padding: 0.625em; /* 10px */
+  padding-top: 2.1875em; /* 46px */
   width: 100%;
-  padding-left: 1em;
+  padding-left: 1em; /* 16px */
 }
 
 .copy {
-    font-size: 1em;
-    padding-left: 40px;
-    padding-right: 40px;
+    font-size: 1em; /* 16px */
+    padding-left: 2.5em; /* 40px */
+    padding-right: 2.5em; /* 40px */
 }
 
 .question {
-  font-size: 1em;
-  padding-left: 25px;
-  padding-right: 20px;
-  padding-top: 25px;   
-  padding-bottom: 25px;
+  font-size: 1em; /* 16px */
+  padding-left: 1.5625em; /* 25px */
+  padding-right: 1.25em; /* 20px */
+  padding-top: 1.5625em;  /* 25px */
+  padding-bottom: 1.5625em; /* 25px */
   text-align: center;
   color: #77AAAD;    
 }
@@ -113,7 +113,7 @@ label, name {
 .circle {
     display: inline;
     float: left;
-    margin-left: 20px;
+    margin-left: 1.25em; /* 20px */
 }
 
 /* ===== STATE STYLES ===== */
