--- a/css/screen.css
+++ b/css/screen.css
@@ -16,7 +16,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 
 html {
-  font-family: "Nunito", sans-serif;
+  font-family: Nunito, sans-serif;
   font-size: 1.18em; /* 19px */
   line-height: 1.43em; /* 23px = 1 gridline*/
   background-color: #CFD8DC;
